--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.1",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
+    "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.8.0",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.7",
